# ant

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs  structs.rs
src/structs/: ant.rs  direction.rs  grid.rs  rule.rs
