[package]
name = "ant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clap_derive ={ version = "4.0.0-rc.1"}
cli-clipboard = "0.4.0"
rand = "0.8.5"
rand_derive2 = "0.1.21"
raylib = "3.7.0"
